--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<div id="body">
 			<div class="top">
-				<div id="pass"><img src="joepass.jpg" /></div>
+				<div id="pass"><img src="joepass.jpg" alt="joe pass" /></div>
 				<div id="example">
 					<p>Learn a new chord, everyday in your browser or email</p>
 					<ul>
@@ -24,8 +24,8 @@
 					</ul>
 					<div class="cotd">
 						<p>February 25: Cmaj</p>
-						<img src="cmaj.png" />
-						<img src="cmaj-tab.png" />
+						<img src="cmaj.png" alt="Cmaj chord" />
+						<img src="cmaj-tab.png" alt="Cmaj tab" />
 						<audio controls>
 							<media location="amaj9.ogg" type="audio/ogg">
 							<media location="amaj9.mp3" type="audio/mpeg">
