close media tags

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<img src="cmaj.png" alt="Cmaj chord" />
 						<img src="cmaj-tab.png" alt="Cmaj tab" />
 						<audio controls>
-							<media location="amaj9.ogg" type="audio/ogg">
-							<media location="amaj9.mp3" type="audio/mpeg">
+							<media location="amaj9.ogg" type="audio/ogg" />
+							<media location="amaj9.mp3" type="audio/mpeg" />
 							Your browser does not support the audio element.
 						</audio>
 					</div>
