Fix html errors_

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 
-			<div id="cta">
+			<div class="cta">
 				<p>Sign up, get more:</p>
 			</div>
 
@@ -43,14 +43,14 @@
 				<h2>Favorites</h2>
 				<p>Save your favorite voicings</p>
 				<p>Print chord charts for practicing</p>
-				<img src="chord.png" />
+				<img src="chord.png" alt="chord chart" />
 			</div>
 
 			<div class="box">
 				<h2>Progressions</h2>
 				<p>ii-V's sounding a little flat?</p>
 				<p>Search for voicings by position and string groups</p>
-				<img src="chord2.png" />
+				<img src="chord2.png" alt="chords" />
 			</div>
 
 			<div class="box">
@@ -58,15 +58,15 @@
 				<p>Need 200 ways to play a minor 7b5?</p>
 				<p>...with the b3 in the bass?</p>
 
-				<img src="chord3.png" />
+				<img src="chord3.png" alt="chord chart 3" />
 			</div>
 
 			<div class="form">
-				<p id="cta">Sign up for free</p>
+				<p class="cta">Sign up for free</p>
 				<form name="input" >
-					Email: <input type="email", placeholder="you@example.com" name="email">
-					Password: <input type="password" name="pwd">
-					<input type="submit" value="Submit" >
+					Email: <input type="email" placeholder="you@example.com" name="email" />
+					Password: <input type="password" name="pwd" />
+					<input type="submit" value="Submit" />
 				</form>
 			</div>
 		</div><!--body-->
