Fix audio error

--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
 						<img src="cmaj.png" alt="Cmaj chord" />
 						<img src="cmaj-tab.png" alt="Cmaj tab" />
 						<audio controls>
-							<media location="amaj9.ogg" type="audio/ogg" />
-							<media location="amaj9.mp3" type="audio/mpeg" />
-							Your browser does not support the audio element.
+							<source src="amajor9.mp3" type="audio/mpeg">
+							<source src="amajor9.ogg" type="audio/ogg" >
+							<embed height="50" width="100" src="amaj9.mp3">
 						</audio>
+						<audio controls>
+  <source src="horse.mp3" type="audio/mpeg">
+  <source src="horse.ogg" type="audio/ogg">
+  <embed height="50" width="100" src="horse.mp3">
+</audio> 
 					</div>
 				</div>
 			</div>
