--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 					</div>
 				</div>
 			</div>
-
-			<div class="cta">
-				<p>Sign up, get more:</p>
+			<div class="spacer">
+				<div class="cta">
+					<p>Sign up, get more:</p>
+				</div>
 			</div>
 
 			<div class="box">
